# TP-sleeve

./: .cursorrules  .gitignore  Makefile  README.md  TP_sleeve.code-workspace  env.example  pyproject.toml  requirements-ctrader-runtime.txt
docs/: workspace_canonical_v1.md
docs/concepts/: cross_sectional_fx_carry_gate_spec_v1.md  intraday_mr_gate_spec_v1.md  ts_momentum_gate_spec_v1.md
src/tp_sleeve/: __init__.py  config.py  executor.py  roll.py  signal.py
src/tp_sleeve.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/tp_sleeve/: __init__.py  test_executor.py  test_roll.py  test_signal.py
