[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tp-sleeve"
version = "0.1.0"
description = "TP sleeve — UST 10Y term-premium tradeability paper sleeve (ADR-041)"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.28",
  "ctrader-open-api==0.9.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
